--- a/css/style.css
+++ b/css/style.css
@@ -471,7 +471,7 @@ body {
     object-fit: cover;
     width: 100%;
     height: 100%;
-    opacity: .5;
+    opacity: .3;
     pointer-events: none;
 }
 .banner .section1 {
@@ -479,7 +479,7 @@ body {
     z-index: 1;
 }
 .section1__head {
-    margin-top: 250px;
+    margin-top: 200px;
     margin-bottom: 25px;
     display: flex;
     flex-wrap: wrap;
@@ -504,39 +504,26 @@ body {
     justify-content: center;
 }
 .section1__main-content {
-    width: 1048px;
-    height: 660px;
-    border: 2px solid #000000;
+    max-width: 1048px;
+    max-height: 660px;
+    
     margin-right: 30px;
     margin-bottom: 50px;
 }
-.content__news {
-    width: 100%;
-    height: 33%;
-}
-.news__heading {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 36px;
-    line-height: 44px; 
-    margin: 30px;
-}
-.news__content {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 24px;
-    margin: 30px;
-    max-width: 800px;
+.news__block {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
 }
 .section1__partners {
-    width: 300px;
-    height: 660px;
+    min-width: 300px;
     border: 2px solid #000000;
+    
 }
 .section__videos {
     width: 100%;
-    height: 230px;
+    min-height: 230px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
