--- a/css/style.css
+++ b/css/style.css
@@ -479,7 +479,7 @@ body {
     z-index: 1;
 }
 .section1__head {
-    margin-top: 200px;
+    
     margin-bottom: 25px;
     display: flex;
     flex-wrap: wrap;
@@ -487,7 +487,7 @@ body {
     align-items: center;
 }
 .kbi-logo {
-    width: 100px;
+    width: 90px;
     height: 75px;
     
 }
@@ -508,13 +508,21 @@ body {
     max-height: 660px;
     
     margin-right: 30px;
-    margin-bottom: 50px;
+    
 }
 .news__block {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
     align-items: center;
+    overflow: auto;
+}
+.news-characteristic {
+    opacity: .85;
+    transition: .2s all linear;
+}
+.news-characteristic:hover {
+    opacity: 1;
 }
 .section1__partners {
     min-width: 300px;
@@ -526,12 +534,13 @@ body {
     min-height: 230px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
-.item__video {
-    border: 5px solid black;
+.item__video {   
+    border-radius: 5px;
     margin-right: 15px;
+    margin-bottom: 15px;
 }
 .item__video:last-child {
     margin-right: 0;
@@ -609,3 +618,115 @@ body {
     margin-right: 0;
 }
 /*Section 2 end*/
+
+/*Section 3 start*/
+.section3 {
+    min-height: 1000px;
+    background-color: #303030;
+    border-radius: 5px;
+}
+.section3_main-content {
+    
+}
+
+
+
+.section3_main {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+    margin: 0 10px;
+    
+}
+.group__card {
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+    color: white;
+    border-radius: 10px;
+}
+.group__card::after {
+    display: block;
+    content: '';
+    width: 100%;
+    height: 100%;
+    background-color: rgba(21, 24, 36, 0.4);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+}
+.group__card:hover .group__card-pic {
+    transform: scale(1.1);
+}
+.group__card_size_lg{
+    grid-column: span 3;
+  }
+  .group__card-pic {
+    width: 100%;
+    transition: 0.15s all;
+}
+.group__card-pic_size_lg{
+    height: 700px; 
+    object-fit: cover; 
+}
+.mask {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-flow: column;
+}
+.mask h2 {
+    font-size: 32px;
+    margin-bottom: 20px;
+    
+}
+.group__card .mask {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+.group__card .group__card-pic {
+    display: block;
+    position: relative;
+}
+.group__card h2 {
+    text-transform: uppercase;
+    text-align: center;
+    position: relative;
+}
+.group__card p {
+    position: relative;
+    text-align: center;
+}
+
+.view_first img {
+    transition: .2s all linear;
+}
+
+.view_first .mask {
+    opacity: 0;
+    background-color: rgba(0,0,0,0.44);
+    transition: .4s all ease-in-out;
+}
+.view_first h2 {
+    transform: translateY(-100px);
+    opacity: 0;
+    transition: .2s all ease-in-out;
+}
+.view_first p {
+    transform: translateY(100px);
+    opacity: 0;
+    transition: .2s all linear;
+}
+.view_first:hover .mask{
+    opacity: 1;
+}
+.view_first:hover h2, .view_first:hover p {
+    opacity: 1;
+    transform: translateY(0);
+}
+/*Section 3 end*/
