--- a/css/style.css
+++ b/css/style.css
@@ -457,7 +457,7 @@ body {
 }
 .banner {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -477,6 +477,9 @@ body {
 .banner .section1 {
     position: relative;
     z-index: 1;
+}
+.section1{
+    margin-top: 100px;
 }
 .section1__head {
     
@@ -679,6 +682,11 @@ body {
 }
 .mask h2 {
     font-size: 32px;
+    margin-bottom: 20px;
+    
+}
+.mask p {
+    font-size: 23px;
     margin-bottom: 20px;
     
 }
